Cosmetic changes, update controller methods

--- a/VanBrewList/Views/Brewery/Index.cshtml
+++ b/VanBrewList/Views/Brewery/Index.cshtml
@@ -30,8 +30,7 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new {  id=item._id }) |
-            @Html.ActionLink("Details", "Details", new { id=item._id }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Details", "Details", new { name=item.Name, address = item.Address })
         </td>
     </tr>
 }
