--- a/VanBrewList/Views/Brewery/Index.cshtml
+++ b/VanBrewList/Views/Brewery/Index.cshtml
@@ -29,8 +29,7 @@
             @Html.DisplayFor(modelItem => item.Address)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new {  id=item._id }) |
-            @Html.ActionLink("Details", "Details", new { name=item.Name, address = item.Address })
+            @Html.ActionLink("Details", "Details", new { id=item._id })
         </td>
     </tr>
 }
