--- a/VanBrewList/Views/Home/Index.cshtml
+++ b/VanBrewList/Views/Home/Index.cshtml
@@ -3,6 +3,12 @@
 }
 
 <div class="jumbotron">
-    <h1>What's On Tap?</h1>
-    <p class="lead">Check out the latest offerings from Vancouver's craft beer scene</p>
+    <div class="container">
+        <h1 style="color:whitesmoke">What's On Tap?</h1>
+    </div>
+</div>
+<div class="container">
+    <div>
+        <p>Find the latest offerings from Vancouver breweries.</p>
+    </div>
 </div>
