--- a/VanBrewList/Content/Site.css
+++ b/VanBrewList/Content/Site.css
@@ -31,7 +31,11 @@ textarea {
     min-height: 400px;
 }
 
-.page-header {
-    padding-left: 5px;
-    padding-right:5px;
+.timg {
+    background-color: white;
+}
+
+.list-img {
+    height: 40px;
+    width: 40px;
 }
