--- a/VanBrewList/Views/Brewery/Detail.cshtml
+++ b/VanBrewList/Views/Brewery/Detail.cshtml
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-md-6">
                 <h4>Tasting Room</h4>
-                <table class="table table">
+                <table class="table table-striped">
                     @foreach (var beer in Model.TastingRoom)
                     {
                         <tr>
@@ -28,7 +28,7 @@
             </div>
             <div class="col-md-6">
                 <h4>Growler Fills</h4>
-                <table class="table table">
+                <table class="table table-striped">
                     @foreach (var beer in Model.Growlers)
                     {
                         <tr>
