--- a/VanBrewList/Content/lux.css
+++ b/VanBrewList/Content/lux.css
@@ -88,8 +88,9 @@ hr {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    margin-top: 0;
-    margin-bottom: 0.5rem
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    margin-left: 0.5rem;
 }
 
 p {
