--- a/VanBrewList/Views/Brewery/Detail.cshtml
+++ b/VanBrewList/Views/Brewery/Detail.cshtml
@@ -8,6 +8,10 @@
     <h2 class="page-header">@Model.Name</h2>
 
     <h5 class="page-header">@Model.Address</h5>
+    
+    <h6>
+        <a href=@Model.Url>Visit Their Website</a>
+    </h6>
 </div>
 <div>
     <hr />
