--- a/VanBrewList/Views/Shared/_Layout.cshtml
+++ b/VanBrewList/Views/Shared/_Layout.cshtml
@@ -17,6 +17,8 @@
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="nav navbar-nav">
                 <li class="nav-item">@Html.ActionLink("Breweries", "Index", "Brewery", null, new { @class = "nav-link" })</li>
+                <li class="nav-item">@Html.ActionLink("Growler Fills", "Growlers", "Beer", null, new { @class = "nav-link" })</li>
+                <li class="nav-item">@Html.ActionLink("Tasting Rooms", "TastingRooms", "Beer", null, new { @class = "nav-link" })</li>
             </ul>
         </div>
     </nav>
