Add date updated to breweries

--- a/VanBrewList/Views/Brewery/Detail.cshtml
+++ b/VanBrewList/Views/Brewery/Detail.cshtml
@@ -8,9 +8,12 @@
     <h2 class="page-header">@Model.Name</h2>
 
     <h5 class="page-header">@Model.Address</h5>
-    
+
     <h6>
         <a href=@Model.Url>Visit Their Website</a>
+    </h6>
+    <h6>
+        Last Updated: @Model.LastUpdated.ToString("MM/dd/yyyy")
     </h6>
 </div>
 <div>
