--- a/VanBrewList/Views/Brewery/Create.cshtml
+++ b/VanBrewList/Views/Brewery/Create.cshtml
@@ -48,5 +48,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    <div class="col-md-offset-2 col-md-10">
+        @Html.ActionLink("Back to List", "Index")
+    </div>
 </div>
