--- a/VanBrewList/Views/Home/Error.cshtml
+++ b/VanBrewList/Views/Home/Error.cshtml
@@ -6,8 +6,9 @@
 </head>
 <body>
     <hgroup>
-        <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
+        <h1>Oops</h1>
     </hgroup>
+    <br />
+    <h2>We're sorry. An error occurred while processing your request.</h2>
 </body>
 </html>
