Add view for admin actions

--- a/VanBrewList/Views/Home/Error.cshtml
+++ b/VanBrewList/Views/Home/Error.cshtml
@@ -6,7 +6,7 @@
 </head>
 <body>
     <hgroup>
-        <h1>Oops</h1>
+        <h1>Oops!</h1>
     </hgroup>
     <br />
     <h2>We're sorry. An error occurred while processing your request.</h2>
