--- a/VanBrewList/Views/Admin/Index.cshtml
+++ b/VanBrewList/Views/Admin/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model VanBrewList.Models.AdminIndex
+
 @{
     ViewBag.Title = "Admin";
 }
@@ -14,13 +15,33 @@
     <br />
     <h4> Actions </h4>
     <div class="col-md-offset-2 col-md-10">
-        @Html.ActionLink("New Brewery", "Create", "Brewery", null, new { @class = "btn btn-default" })
+        <div class="col-sm-10">
+            @Html.ActionLink("New Brewery", "Create", "Brewery", null, new { @class = "btn btn-secondary" })
+        </div>
     </div>
-    <div class="col-md-offset-2 col-md-10">
-        @Html.ActionLink("Delete Brewery", "Delete", "Admin", null, new { @class = "btn btn-default" })
-    </div>
-    <div class="col-md-offset-2 col-md-10">
-        @Html.ActionLink("Edit Brewery", "Edit", "Admin", null, new {  @class= "btn btn-default" })
-    </div>
+
+    @using (Html.BeginForm("Delete", "Brewery", FormMethod.Get, new { id = Model.id }))
+    {
+        <div class="form-horizontal">
+            <div class="col-md-offset-2 col-md-10 form-group">
+                <div class="breweryDrop col-sm-6">
+                    <input type="submit" value="Delete" id="Submit" class="btn btn-secondary" />                    
+                    @Html.DropDownListFor(m => m.id, Model.breweries)
+                </div>
+            </div>
+        </div>
+    }
+
+    @using (Html.BeginForm("Edit", "Brewery", FormMethod.Get, new { id = Model.id }))
+    {
+        <div class="form-horizontal">
+            <div class="col-md-offset-2 col-md-10 form-group">
+                <div class="breweryDrop col-sm-6">
+                    <input type="submit" value="Delete" id="Submit" class="btn btn-secondary"/>
+                    @Html.DropDownListFor(m => m.breweries, Model.breweries)
+                </div>
+            </div>
+        </div>
+    }
 
 </div>
