--- a/VanBrewList/Views/Admin/Index.cshtml
+++ b/VanBrewList/Views/Admin/Index.cshtml
@@ -9,14 +9,17 @@
 
     <h2>Admin</h2>
 
-    <div class="col-md-offset-2 col-md-10">
-        @Html.ActionLink("Login", "Login", "Admin", null, new { @class = "btn btn-primary" })
-    </div>
     <br />
     <h4> Actions </h4>
     <div class="col-md-offset-2 col-md-10">
         <div class="col-sm-10">
-            @Html.ActionLink("New Brewery", "Create", "Brewery", null, new { @class = "btn btn-secondary" })
+            @Html.ActionLink("New Brewery", "Create", "Brewery", null, new { @class = "btn btn-primary" })
+        </div>
+    </div>
+
+    <div class="col-md-offset-2 col-md-10">
+        <div class="col-sm-10">
+            @Html.ActionLink("New Beer", "Create", "Beer", null, new { @class = "btn btn-primary" })
         </div>
     </div>
 
@@ -25,7 +28,7 @@
         <div class="form-horizontal">
             <div class="col-md-offset-2 col-md-10 form-group">
                 <div class="breweryDrop col-sm-6">
-                    <input type="submit" value="Delete" id="Submit" class="btn btn-secondary" />                    
+                    <input type="submit" value="Delete" id="Submit" class="btn btn-primary" />
                     @Html.DropDownListFor(m => m.id, Model.breweries)
                 </div>
             </div>
@@ -37,7 +40,7 @@
         <div class="form-horizontal">
             <div class="col-md-offset-2 col-md-10 form-group">
                 <div class="breweryDrop col-sm-6">
-                    <input type="submit" value="Delete" id="Submit" class="btn btn-secondary"/>
+                    <input type="submit" value="Edit" id="Submit" class="btn btn-primary" />
                     @Html.DropDownListFor(m => m.breweries, Model.breweries)
                 </div>
             </div>
