--- a/VanBrewList/Views/Admin/Index.cshtml
+++ b/VanBrewList/Views/Admin/Index.cshtml
@@ -13,24 +13,25 @@
     <h4> Actions </h4>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <div class="col-sm-6">
+            <div class="col-sm-3">
                 @Html.ActionLink("New Brewery", "Create", "Brewery", null, new { @class = "btn btn-primary btn-block" })
             </div>
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <div class="col-sm-6">
+            <div class="col-sm-3">
                 @Html.ActionLink("New Beer", "Create", "Beer", null, new { @class = "btn btn-primary  btn-block" })
             </div>
         </div>
     </div>
 
-    @using (Html.BeginForm("Delete", "Brewery", FormMethod.Get, new { id = Model.id }))
+    @using (Html.BeginForm("Delete Brewery", "Brewery", FormMethod.Get, new { id = Model.id }))
     {
-        <div class="form-horizontal">
+    <div class="form-group">
+        <div class="form-inline">
             <div class="col-md-offset-2 col-md-10 form-group">
-                <div class="breweryDrop col-sm-6">
+                <div class="breweryDrop col-sm-3">
                     <input type="submit" value="Delete" id="Submit" class="btn btn-primary btn-block" />
                 </div>
                 <div class="col-sm-4">
@@ -38,13 +39,15 @@
                 </div>
             </div>
         </div>
+    </div>
     }
 
-    @using (Html.BeginForm("Edit", "Brewery", FormMethod.Get, new { id = Model.id }))
+    @using (Html.BeginForm("Edit Brewery", "Brewery", FormMethod.Get, new { id = Model.id }))
     {
-        <div class="form-horizontal">
+    <div class="form-group">
+        <div class="form-inline">
             <div class="col-md-offset-2 col-md-10 form-group">
-                <div class="breweryDrop col-sm-6">
+                <div class="breweryDrop col-sm-3">
                     <input type="submit" value="Edit" id="Submit" class="btn btn-primary btn-block" />
                 </div>
                 <div class="col-sm-4">
@@ -52,6 +55,7 @@
                 </div>
             </div>
         </div>
+    </div>
     }
 
 </div>
